# src/main/java/com/wup/librarystats/controller/LibraryStatsController.java
@@ -3,7 +3,9 @@ package com.wup.librarystats.controller;
 
 import com.wup.librarystats.adapter.LibraryStatsAdapter;
 import lombok.RequiredArgsConstructor;
+import org.openapitools.model.BooksOfPublisherAndAuthor;
 import org.openapitools.model.StatInfoForPort;
+import org.openapitools.model.YoungestOldestBook;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -19,5 +21,15 @@ public class LibraryStatsController implements org.openapitools.api.LibraryStats
     @Override
     public ResponseEntity<StatInfoForPort> addNewBookInfo(@Valid StatInfoForPort statInfoForPort) {
         return ResponseEntity.status(HttpStatus.CREATED).body(libraryStatsAdapter.addNewBookInfo(statInfoForPort));
+    }
+
+    @Override
+    public ResponseEntity<BooksOfPublisherAndAuthor> getBooksByAuthorAndPublisher(@Valid org.openapitools.model.AuthorPublisherRequest authorPublisherRequest) {
+        return ResponseEntity.ok(libraryStatsAdapter.getNumberOfBooksByAuthorAndPublisher(authorPublisherRequest));
+    }
+
+    @Override
+    public ResponseEntity<YoungestOldestBook> getYoungestOldestBook() {
+        return ResponseEntity.ok(libraryStatsAdapter.getYoungestAndOldestBook());
     }
 }
